1. adjusted spacing 2. tuned color 3. Corrected footer content

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    text-shadow: 0px 0px 1px #DDD !important; /* #DCDCDC */
+}
+
 @font-face {
     font-family: 'Inconsolata';
     font-style: normal;
@@ -111,7 +115,7 @@ a:focus {
 }
 
 .post-content a {
-    border-bottom: 1px solid rgba(255, 81, 47, 0.5)
+    border-bottom: 1px solid rgba(0, 0, 255, 0.5)
 }
 
 .post-content a:hover,
@@ -430,7 +434,7 @@ iframe {
 }
 
 #nprogress .bar {
-    background: #FF512F !important;
+    background: #0000FF !important;
     height: 3px !important
 }
 
@@ -448,8 +452,8 @@ iframe {
     width: 4em !important;
     height: 4em !important;
     margin: -4em -4em 0 0 !important;
-    border-top-color: #FF512F !important;
-    border-left-color: #FF512F !important
+    border-top-color: #0000FF !important;
+    border-left-color: #0000FF !important
 }
 
 body {
@@ -675,7 +679,8 @@ body {
 }
 
 #nav .nav-menu {
-    float: right
+    float: right;
+    padding-right: 0.7em;
 }
 
 #nav .nav-menu:after {
@@ -688,7 +693,8 @@ body {
     display: block;
     height: 1em;
     line-height: 1em;
-    padding: 1.5em;
+    padding: 0.3em;
+    padding-top: 1.5em;
     text-align: center;
     float: left;
     cursor: pointer;
@@ -767,7 +773,7 @@ body {
     width: 110%;
     height: 2em;
     background: #fff;
-    border-bottom: 4px solid #FF512F;
+    border-bottom: 4px solid #0000FF;
     box-shadow: 0 0.125em 0.125em rgba(0, 0, 0, 0.1);
     -webkit-transform: rotate(2.5deg);
     transform: rotate(2.5deg);
@@ -883,7 +889,7 @@ body {
     left: 0;
     top: 0;
     height: 100%;
-    border-left: 4px solid #FF512F
+    border-left: 4px solid #0000FF
 }
 
 .overlay {
@@ -921,7 +927,7 @@ body {
 
 #header {
     position: relative;
-    padding: 4em 0
+    padding: 3em 0
 }
 
 #header .inner {
@@ -960,7 +966,7 @@ body {
     font-style: normal;
     font-weight: 400;
     font-size: 0.5em;
-    background: #FF512F;
+    background: #0000FF;
     color: #fff;
     text-shadow: 0 0 2px #DD2476;
     border-radius: 2em
@@ -1003,7 +1009,7 @@ body {
     margin: -1em auto 1em;
     overflow: hidden;
     border-radius: 3em;
-    border: 2px solid #FF512F;
+    border: 2px solid #0000FF;
     background: #DD2476
 }
 
@@ -1082,7 +1088,7 @@ body {
     width: 100%;
     left: 0;
     bottom: 0;
-    border-bottom: 4px solid #FF512F
+    border-bottom: 4px solid #0000FF
 }
 
 #footer {
@@ -1188,9 +1194,9 @@ body {
     position: absolute;
     left: 0;
     bottom: -0.334em;
-    width: 1em;
+    width: 1.5em;
     margin-bottom: -2px;
-    border-bottom: 4px solid #FF512F
+    border-bottom: 4px solid #0000FF
 }
 
 .post .post-title a {
@@ -1200,8 +1206,8 @@ body {
 }
 
 .post .post-header {
-    padding: 4em 0 0;
-    margin-bottom: 3em
+    padding: 1em 0 0;
+    margin-bottom: 2.5em
 }
 
 #post-index {
@@ -1419,7 +1425,7 @@ body {
     position: relative;
     margin: -2em -2em 0;
     overflow: hidden;
-    background: #FF512F
+    background: #0000FF
 }
 
 @media only screen and (max-width: 50em) {
@@ -1445,7 +1451,7 @@ body {
     width: 110%;
     height: 4em;
     background: #fff;
-    border-top: 4px solid #FF512F;
+    border-top: 4px solid #0000FF;
     box-shadow: 0 0 2em rgba(0, 0, 0, 0.2);
     -webkit-transform: rotate(5deg);
     transform: rotate(5deg);
@@ -1502,7 +1508,7 @@ body {
 }
 
 .post-footer {
-    margin: 4em 0
+    margin: 1em 0
 }
 
 .post-footer:after {
@@ -1526,7 +1532,7 @@ body {
     border-radius: 2px;
     color: #fff;
     text-shadow: 0 0 2px #DD2476;
-    background: #FF512F;
+    background: #0000FF;
     font-weight: 400
 }
 
@@ -1618,12 +1624,12 @@ body {
 
 .post-nav .post-nav-item:hover .post-nav-teaser .post-nav-icon,
 .post-nav .post-nav-item:focus .post-nav-teaser .post-nav-icon {
-    box-shadow: 0 0 0 25em #FF512F
+    box-shadow: 0 0 0 25em rgba(0, 0, 255, 0.75)
 }
 
 @media only screen and (max-width: 50em) {
     .post-nav .post-nav-item:hover .post-nav-teaser .post-nav-icon, .post-nav .post-nav-item:focus .post-nav-teaser .post-nav-icon {
-        box-shadow: 0 0 0 2px #FF512F
+        box-shadow: 0 0 0 2px rgba(0, 0, 255, 0.75)
     }
 }
 
@@ -1704,7 +1710,7 @@ body {
     text-align: center;
     box-sizing: border-box;
     border-radius: 10em;
-    border: 1px solid #FF512F;
+    border: 1px solid #0000FF;
     box-shadow: 0 0 0 0 transparent;
     transition: all ease-out 0.1s;
     background: #F2F3F5
@@ -1779,7 +1785,7 @@ body {
     text-decoration: none;
     font-weight: 700;
     color: #363740;
-    border: 1px solid #FF512F;
+    border: 1px solid #0000FF;
     transition: all ease-out 0.1s;
     border-radius: 4em;
     z-index: 60
@@ -1788,7 +1794,7 @@ body {
 .pagination .pagination-item:hover,
 .pagination .pagination-item:focus {
     color: #1F2026;
-    box-shadow: 0 0 0 2px #FF512F
+    box-shadow: 0 0 0 2px #0000FF
 }
 
 .pagination .pagination-item i {
